ops/core/src/main/java/org/platformlayer/ops/firewall/scripts/iptables-lockdown
#!/bin/bash

set -e

iptables-restore <<EOF
# By default, we lock down everything but SSH & ICMP
*filter
:INPUT DROP
:FORWARD DROP
:OUTPUT ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -m state --state ESTABLISHED -j ACCEPT
COMMIT

# Older versions of Debian (Squeeze) have different syntaxes (for INPUT)
#*nat
#:PREROUTING ACCEPT
#:INPUT ACCEPT
#:OUTPUT ACCEPT
#:POSTROUTING ACCEPT
#COMMIT

EOF


# Older versions of Debian (Squeeze) have different syntaxes (for INPUT)
for TABLE in nat mangle
do
    iptables -t $TABLE -F
    iptables -t $TABLE -X
    iptables -t $TABLE -Z
done

ip6tables-restore <<EOF
# By default, we lock down everything but SSH & ICMP6
*filter
:INPUT DROP
:FORWARD DROP
:OUTPUT ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmpv6 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -m state --state ESTABLISHED -j ACCEPT
COMMIT

EOF
